2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-calculator.[ch], gnome-number-entry.[ch]: Moved to
	libcompat for the moment. This should be anywhere, but not in
	libgnomeui; GnomeCalculator should be a Bonobo component.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-pixmap-entry.[ch]: Moved to libcompat. This has been
	obsoleted by GnomeIconEntry.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-icon-entry.c (gnome_icon_entry_set_preview_size):
	New function; inspired by gnome_pixmap_entry_set_preview_size().
	Added "preview_x" and "preview_y" properties.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-file-entry.[ch]: Moved to libcompat. This has been replaced
	by GnomeFileSelector.

	* gnome-gconf.c (gnome_file_entry_get/set): Removed.
	(gnome_icon_entry_get/set): Removed.
	(gnome_pixmap_entry_get/set): Removed.
	(gnome_entry_get/set): Removed.

2001-02-23  Martin Baulig  <baulig@suse.de>

	* gnome-canvas.h (GnomeCanvas): Removed `cc' field, GdkColorContext
	no longer exists in GTK+.

	* gnome-canvas.c (gnome_canvas_get_color): Use gdk_rgb_find_color()
	instead of gdk_color_context_get_pixels().
	(gnome_canvas_get_color_pixel): Likewise.

	* gnome-canvas-line.c (gnome_canvas_line_get/set_property):
	Use gdk_rgb_find_color() instead of gdk_color_context_query_color().

	* gnome-canvas-polygon.c (gnome_canvas_polygon_get/set_property):
	Use gdk_rgb_find_color() instead of gdk_color_context_query_color().
	(get_color_value): Likewise.

	* gnome-canvas-rect-ellipse.c (gnome_canvas_re_get/set_property):
	Use gdk_rgb_find_color() instead of gdk_color_context_query_color().
	(get_color_value): Likewise.

	* gnome-canvas-text.c (gnome_canvas_text_get/set_property):
	Use gdk_rgb_find_color() instead of gdk_color_context_query_color().

2001-02-23  Martin Baulig  <baulig@suse.de>

	* Makefile.am (INCLUDES): Added $(PANGO_CFLAGS).
	(libgnomeui_2_la_LDFLAGS, LDADD): Added $(PANGO_LIBS).

	* gnome-init.c (gtk_pre_args_parse): Comment out setting