@@ -35,3 +35,4 @@ gnome-rexec-server
 gnomemarshal.h
 gnomemarshal.c
 stamp-gnomemarshal.h
+libgnomeui-2.0.pc
