@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: libgnomeui
+Description: libgnomeui
+Requires: libgnome-2.0 gtk+-2.0 gdk-pixbuf-2.0 gconf-2.0 libart-2.0
+Version: @VERSION@
+Libs: -L${libdir} -lgnomeui-@GNOME_INTERFACE_VERSION@
+Cflags:
