@@ -1,5 +1,10 @@
 2001-02-23  Martin Baulig  <baulig@suse.de>
 
+	* libgnomeui-2.0.pc.in: New file.
+	* Makefile.am: Install pkg-config file.
+
+2001-02-23  Martin Baulig  <baulig@suse.de>
+
 	* gnome-calculator.[ch], gnome-number-entry.[ch]: Moved to
 	libcompat for the moment. This should be anywhere, but not in
 	libgnomeui; GnomeCalculator should be a Bonobo component.
